# pysmiles

./: .coveragerc  .coveralls.yml  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements-tests.txt  run_pylint.py  setup.cfg  setup.py
.github/workflows/: deploy.yaml  test.yaml
pysmiles/: PTE.json  __init__.py  cheminfo.py  read_smiles.py  smiles_helper.py  testhelper.py  write_smiles.py
tests/: conftest.py  test_hypothesis.py  test_read_smiles.py  test_smiles_helpers.py  test_write_smiles.py
