[wheel]
universal = 1

[metadata]
name = pysmiles
author = P C Kroon
author_email = p.c.kroon@rug.nl
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = SMILES cheminformatics chemistry

[options]
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    networkx ~= 2.0
zip-safe = False
