[wheel]
universal = 1

[metadata]
name = pysmiles
author = P C Kroon
author_email = p.c.kroon@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
summary = A lightweight SMILES reader and writer
url = https://github.com/pckroon/pysmiles
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = SMILES cheminformatics chemistry

[options]
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    networkx
zip-safe = False

[pbr]
skip_changelog = true
skip_authors = true

